--- a/index.html
+++ b/index.html
@@ -1393,7 +1393,7 @@
                     <h4>Performance Index</h4>
                     <p>The Performance Index is defined differently for each position, and measured only for each individual league and position; meaning you won't be able to compare values across leagues and positions, and why these options are greyed out from the index tool when Performance Index metric is selected.</p>
                     
-                    <p>Here is the corresponding metric table used for each position, along with their respective weight in the total score)</p>
+                    <p>Here is the corresponding metric table used for each position, along with their respective weight in the total score.</p>
         <br>
                     <ul>
                         <li>
