--- a/index.html
+++ b/index.html
@@ -302,6 +302,8 @@
               background: #ffffff;
               border: 1px solid #e5e7eb;
               padding: 10px;
+	font-size: 16px;
+
               border-radius: 5px;
               cursor: pointer;
             }
