--- a/index.html
+++ b/index.html
@@ -1040,11 +1040,11 @@
                     <h4>Goalkeepers</h4>
                     <ul>
                         <li>
-                            <strong>Defensive Actions per 90</strong>
+                            <strong>Defensive actions per 90</strong>
                             <br>Sum of sweeping actions such as interceptions, tackles and ground duels with opposing players; normalized per 90 minutes.
                         </li><br>
                         <li>
-                            <strong>Aerials Contested per 90</strong>
+                            <strong>Aerials duels per 90</strong>
                             <br>The number of aerial duels in which the goalkeeper participates; normalized per 90 minutes.
                           </li><br>
                         <li>
@@ -1056,15 +1056,15 @@
                             <br>The number of passes attempted by the goalkeeper; normalized per 90 minutes.
                         </li><br>
                         <li>
-                            <strong>Long Pass, %</strong>
+                            <strong>Long pass accuracy %</strong>
                                   <br>The percentage of long passes successfully completed by the goalkeeper.
                         </li><br>
                         <li>
-                            <strong>Short Pass, %</strong>
+                            <strong>Short pass completion %</strong>
                             <br>The percentage of short and medium passes successfully completed by the goalkeeper.
                         </li><br>
                         <li>
-                            <strong>PSxG - GA per 90</strong>
+                            <strong>Prevented goals (PSxG - GA) per 90</strong>
                             <br>The difference between the post-shot expected goals (PSxG) prevented by the goalkeeper and the goals conceded (GA); normalized per 90 minutes.
                         </li><br>
                     </ul>
