--- a/index.html
+++ b/index.html
@@ -1552,6 +1552,12 @@ Non-penalty goals per 90 x9, Goals per 90 x8, xG per 90 x5, Goal conversion % x4
     <section id="news" class="section">
   <h2>News & Updates</h2>
 
+  <h4>February 25, 2025</h4>
+  <ul>
+    <li><strong>FIX</strong> — Similar data  section now properly reflects the current selection, even when the last player/team is removed from the radar</li>
+     <br> <li><strong>NEW (PRO)</strong> — Similar data can now be filtered by Season (Current, All), League (All, Top 7, Others) and Age</li>
+  </ul>
+
   <h4>February 23, 2025</h4>
   <ul>
     <li><strong>NEW</strong> — Included a fully revamped Guide page with complete metric glossary</li>
