--- a/index.html
+++ b/index.html
@@ -778,16 +778,15 @@
               <div id="radar">
                 <h3>Radar — <i>Free & Pro</i></h3>
                 <div class="tool-section">
-                  <div class="tool-description">          <img src="https://i.imgur.com/D5ACP5b.png" alt="Radar Comparison Tool" class="responsive-image">
+                  <div class="tool-description">          <img src="https://i.imgur.com/WnuYabc.png" alt="Radar Comparison Tool" class="responsive-image">
         
-                    <p>The radar comparison tool helps visualize player percentile rank, display multiple players and compare their profiles and output.
+                    <p>The radar comparison tool visually represents player percentile rankings, allowing for the comparison of multiple players' profiles and output. Similar radar profiles in the database are also shown for each player, which Pro users can filter.
                       <ul>
                         <li>Leagues (Free): Top 7 Leagues</li>
                         <li>Seasons (Free): Current and past season</li>
                         <li>Leagues (Pro): All 40 leagues</li>
                         <li>Seasons (Pro): Up to 2022</li>
                         <li>Metrics: <a href="#radarglossary">7 key metrics</a> per position</li>
-        
                       </ul>
                     <ul> <li>Top 7 Leagues percentiles computed together for each position and season</li>
                     <li>All other leagues percentiles computed together for each position and season</li>
@@ -805,8 +804,8 @@
                         <li>Click 'x' to remove a player</li>
                         <li>Click the bottom-right toggle for unfill/fill radar outlines</li>
                         <li>Click the camera icon to save a screenshot</li>    
-                        <li>Displays the top 5 most similar data profiles in the database based on the radar metrics</li>
                         <li>Click on a similar player to add their radar</li>
+			        <li><strong>PRO</strong> Filter similar players by Age (U30, U25, U23, U21); Season (Current, All) or League (Top 7, Outside Top 7, All)</li>
                     </ul>
                     <br>
                   </div>
@@ -987,6 +986,7 @@
                     <li>Leagues: Top 7 Leagues only</li>
                     <li>Seasons: Current & past season</li>
                     <li>Metrics: <a href="#teammetrics">7 key parameters</a> (percentiles for groups of metrics, computed against all Top 7 league teams for each season)</li>
+                    <li>Similar team profiles</li>
                     <li>More information on how to use the tool @ <a href="#radar">Player Radars</a></li>
                   </ul></div></div>
                   <div class="tool-section">
