--- a/index.html
+++ b/index.html
@@ -1330,7 +1330,7 @@
                     <h5>Goal Creating</h5>
                     <ul>
                         <li><strong>Assists</strong><i> (per 90)</i><br>Passes that directly lead to a goal.</li><br>
-                        <li><strong>Expected assists</strong><i> (per 90)</i><br>Sum of the xG values of shots that follow a player's passes. Also refered to as xA.</li><br>
+                        <li><strong>Expected assists</strong><i> (per 90)</i><br>xA is the sum of the xG values of shots that follow a player's passes. Also refered to as xAG.</li><br>
                         <li><strong>xA per 100 passes</strong><br>Amount of expected assists accumulated for every 100 pass attempts.</li><br>
                         <li><strong>Key passes</strong><i> (per 90)</i><br>Open-play passes that directly lead to a goal-scoring opportunity. Also refered to as Big chances created.</li><br>
                         <li><strong>Goals + Assists</strong><i> (per 90)</i><br>Sum of goals scored and assists delivered. Also refered to as G+A.</li><br>  
