--- a/index.html
+++ b/index.html
@@ -1551,7 +1551,13 @@
           
               <section id="news" class="section">
     <h2>News & Updates</h2>
-  
+
+    <h4>March 13, 2025</h4>
+    <ul>
+      <li><strong>FIX</strong> — Added the new Plot UI to all Player Plots
+      <br><i>Chart resizing, Vertical view, Smarter label placement, Higher quality screenshots, Default dot size option</i></li>
+    </ul>
+		      
     <h4>March 8, 2025</h4>
     <ul>
       <li><strong>FIX</strong> — Improved UI/UX on the Team Plot tool, now including vertical view for mobile</li>
