--- a/index.html
+++ b/index.html
@@ -1555,7 +1555,7 @@
     <h4>March 13, 2025</h4>
     <ul>
       <li><strong>FIX</strong> — Added the new Plot UI to all Player Plots
-      <br><i>Chart resizing, Vertical view, Smart label placement, Higher quality screenshots, Default dot size option, and more QoL updates</i></li>
+      <br><i>Chart resizing, Vertical view, Smart label placement, Higher quality screenshots, Default dot size option, League legend, and more QoL updates</i></li>
     </ul>
 		      
     <h4>March 8, 2025</h4>
