--- a/index.html
+++ b/index.html
@@ -1564,6 +1564,9 @@
       <br><i>Coming soon: Brazil, Sweden, Norway (when seasons begin)</i>	 	      
       </li><br>
 	          <li><strong>FIX</strong> — Added new plot UI to "Previous season" plot pages</li>
+	    <br>
+	    	          <li><strong>FIX</strong> — Added new plot styles to player and team profiles</li>
+
     </ul>
 		      
     <h4>March 13, 2025</h4>
