--- a/index.html
+++ b/index.html
@@ -1552,6 +1552,12 @@
               <section id="news" class="section">
     <h2>News & Updates</h2>
 
+		        <h4>March 18, 2025</h4>
+    <ul>
+      <li><strong>FIX</strong> — Revamped mobile application radar page design
+      <br><br><i>Improved overall UI and various bug fixes</i></li>
+    </ul>
+		
 <h4>March 17, 2025</h4>
     <ul>
       <li><strong>NEW</strong> — 2025 season is now available for MLS, Japan, Korea, Argentina, Uruguay, Paraguay, Colombia, Chile, Ecuador
