--- a/index.html
+++ b/index.html
@@ -1552,6 +1552,14 @@
               <section id="news" class="section">
     <h2>News & Updates</h2>
 
+		        <h4>March 20, 2025</h4>
+    <ul>
+      <li><strong>FIX</strong> — Updated page design for all Radar Tools, now aligned with new plot UI
+      <br><br><i>Now up to 40 color options, new centered layout for desktop users, and various UI/UX & optimization fixes</i></li>
+    </ul>
+
+
+		      
 		        <h4>March 18, 2025</h4>
     <ul>
       <li><strong>FIX</strong> — Revamped mobile application radar page design
@@ -1578,7 +1586,7 @@
     <h4>March 13, 2025</h4>
     <ul>
       <li><strong>FIX</strong> — Added the new Plot UI to all Player Plots
-      <br><br><i>Chart resizing, Vertical view, Smart label placement, Higher quality screenshots, Default dot size option, League legend, and more QoL updates</i></li>
+      <br><br><i>Chart resizing, vertical view, smart label placement, higher quality screenshots, default dot size option, league legend, and more QoL updates</i></li>
     </ul>
 		      
     <h4>March 8, 2025</h4>
