--- a/index.html
+++ b/index.html
@@ -1554,7 +1554,7 @@
 
 		        <h4>March 20, 2025</h4>
     <ul>
-      <li><strong>FIX</strong> — Updated page design for all Radar Tools, now aligned with new plot UI
+      <li><strong>FIX</strong> — Revamped page design for all Radar Tools, now aligned with new plot UI
       <br><br><i>Now up to 40 color options, new centered layout for desktop users, and various UI/UX & optimization fixes</i></li>
     </ul>
 
