--- a/index.html
+++ b/index.html
@@ -1555,7 +1555,7 @@
 		        <h4>March 20, 2025</h4>
     <ul>
       <li><strong>FIX</strong> — Revamped page design for all Radar Tools, now aligned with new plot UI
-      <br><br><i>Now up to 40 color options, new centered layout for desktop users, and various UI/UX & optimization fixes</i></li>
+      <br><br><i>Up to 40 color options, new centered layout for desktop users, and various UI/UX & optimization fixes</i></li>
     </ul>
 
 
