--- a/index.html
+++ b/index.html
@@ -799,9 +799,9 @@
                         <li>Choose a position template</li>
                           <li>Search player by last name</li>
                           <li>Click on the player in the list or press '+' or Enter to select the first match</li>
-                          <li>Up to 6 colors for different players</li>
+                          <li>Up to 40 colors for different players</li>
                           <li>Click 'x' to remove a player</li>
-                          <li>Click the bottom-right toggle for unfill/fill radar outlines</li>
+                          <li>Click the bottom-left toggle for unfill/fill radar outlines</li>
                           <li>Click the camera icon to save a screenshot</li>    
                           <li>Click on a similar player to add their radar</li>
                 <li><strong>PRO</strong> Filter similar players by Age (U30, U25, U23, U21); Season (Current, All) or League (Top 7, Outside Top 7, All)</li>
@@ -825,24 +825,26 @@
                       </ul><br>
                       <h4>How to Use</h4>
                   <ol>
-                      <li>Choose a position template</li>
-                      <li>First dropdown controls metrics for the x-axis</li>
-                      <li>Second dropdown controls metrics for the y-axis</li>
-                      <li>Third dropdown controls dot size</li>
-                      <li>Filter by age and league</li>
-                    </ol>
-                  <ul>
-                    <li>Metrics are sorted by categories (greyed out items in the selectors)</li>
-                      <li>Hover over a dot to read player details (name and raw values for all three metrics)</li>
-                      <li>Search by last name to highlight a player's dot in pink</li>
-                      <li>Click on a dot to show/hide the player's name on the plot</li>
-                      <li>"Click All" selects all visible dots (unselects those already selected)</li>
-                      <li>Click on the chart icon to add/remove median lines</li>
-                      <li> Identity (x=y) line appears when both Goals and xG (or NPG and npxG; or Assists and xA) are selected. This helps visualize who is over or underachieving on their expected values</li>
-                      <li>Dot colors are league-based for ease of distinction when multiple leagues are chosen</li>
-                      <li>Click on "Screenshot" to generate a screenshot</li>
-                      <li>By essence, plots use per 90 metrics rather than totals; but selecting minutes played via dot size can provide context</li>
-                      <li>Click "23/24" to load past season data (some features and metrics may not exist for past seasons)</li>
+     <li>Choose a position template</li>
+                    <li>First dropdown controls metrics for the x-axis</li>
+                    <li>Second dropdown controls metrics for the y-axis</li>
+                    <li>Third dropdown controls dot size</li>
+                    <li>Filter by age and league</li>
+                  </ol>
+                <ul>
+                  <li>Metrics are sorted by categories</li>
+                    <li>Hover over a dot to read player details (name and raw values for all three metrics)</li>
+                    <li>Search by last name to find and highlight a player</li>
+                    <li>Click on a dot to show/hide the player's name on the plot</li>
+                    <li>"Click All" selects all visible dots (some names may be omitted for readability)</li>
+                    <li>Click on the chart icon to add/remove median lines</li>
+                    <li>Identity (x=y) line appears when both Goals and xG (or Assists and xA, etc) are selected, this helps visualize who is over/underachieving on their expected values</li>
+                    <li>Dot colors are league-based for ease of distinction, legend is displayed when 2-10 leagues are selected</li>
+		 <li>Third metric selector (dot size) can be set to "None" for default dot size</li>
+                    <li>Click on "Screenshot" to generate a screenshot</li>
+                    <li>By essence, plots use per 90 metrics rather than totals; but selecting minutes played via dot size can provide context</li>
+                    <li>Click on "Previous" to load data from the previous season</li>
+		<li>The chart dimensions will depend on your window size, tilt your mobile horizontally for a better view</li>
                   </ul><br>
                     </div>
                   </div>
@@ -947,7 +949,8 @@
                       <li>Filter by league, age, minutes played</li>
                       <li>Search for players ranking over specific radar percentile values</li>
                       <li>Combine multiple metrics to refine your search results</li>
-                      <li>Click on "23/24" to load past season data</li>
+			<li>Click on the metric headers to sort your table</li>  
+                      <li>Click on "Past season" to load data from the previous season</li>
                   </ul>
                 </div>
               </div>       </div>
