--- a/index.html
+++ b/index.html
@@ -841,7 +841,7 @@
                     <li>Identity (x=y) line appears when both Goals and xG (or Assists and xA, etc) are selected, this helps visualize who is over/underachieving on their expected values</li>
                     <li>Dot colors are league-based for ease of distinction, legend is displayed when 2-10 leagues are selected</li>
 		 <li>Third metric selector (dot size) can be set to "None" for default dot size</li>
-                    <li>Click on "Screenshot" to generate a screenshot</li>
+                    <li>Click on the camera icon to generate a screenshot</li>
                     <li>By essence, plots use per 90 metrics rather than totals; but selecting minutes played via dot size can provide context</li>
                     <li>Click on "Previous" to load data from the previous season</li>
 		<li>The chart dimensions will depend on your window size, tilt your mobile horizontally for a better view</li>
