--- a/index.html
+++ b/index.html
@@ -836,7 +836,7 @@
                     <li>Hover over a dot to read player details (name and raw values for all three metrics)</li>
                     <li>Search by last name to find and highlight a player</li>
                     <li>Click on a dot to show/hide the player's name on the plot</li>
-                    <li>"Click All" selects all visible dots (some names may be omitted for readability)</li>
+                    <li>The circular toggle selects/unselects all visible dots (names may be omitted for readability)</li>
                     <li>Click on the chart icon to add/remove median lines</li>
                     <li>Identity (x=y) line appears when both Goals and xG (or Assists and xA, etc) are selected, this helps visualize who is over/underachieving on their expected values</li>
                     <li>Dot colors are league-based for ease of distinction, legend is displayed when 2-10 leagues are selected</li>
