--- a/index.html
+++ b/index.html
@@ -1565,7 +1565,7 @@
 		      
 		        <h4>March 18, 2025</h4>
     <ul>
-      <li><strong>FIX</strong> — Revamped mobile application radar page design
+      <li><strong>FIX</strong> — Revamped mobile application Radar page design
       <br><br><i>Improved overall UI and various bug fixes</i></li>
     </ul>
 		
