--- a/index.html
+++ b/index.html
@@ -573,7 +573,8 @@
 <body>
 <!-- Add menu toggle button right after body tag -->
 <button class="menu-toggle">☰</button>
-<div data-i18n="page-content">['\n', <div class="nav-container">
+<div data-i18n="page-content">
+<div class="nav-container">
 <ul class="tree">
 <li><a href="#aboutus">About Us</a></li>
 <li><a href="#ourservices">What We Offer</a>
