--- a/index.html
+++ b/index.html
@@ -267,52 +267,41 @@
 }
  .single-line-image {
      max-width: 90%;
-    /* Slightly reduced from 100% to prevent edge-to-edge */
      height: auto;
-    /* Allow height to adjust naturally */
      width: auto;
-    /* Allow width to adjust naturally */
      max-height: 500px;
-    /* Reduced from 800px for more consistency */
      display: block;
      border-radius: 8px;
-    /* Add slight rounding to corners */
      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-    /* Subtle shadow for depth */
      margin: 20px auto;
-    /* Increased margin for better spacing */
      object-fit: contain;
-    /* Maintain aspect ratio while fitting within bounds */
 }
  .single-line-image2 {
      max-width: 90%;
-    /* Slightly reduced from 100% to prevent edge-to-edge */
      height: auto;
-    /* Allow height to adjust naturally */
      width: auto;
-    /* Allow width to adjust naturally */
      max-height: 500px;
-    /* Reduced from 800px for more consistency */
      display: block;
      margin: 20px auto;
-    /* Increased margin for better spacing */
      object-fit: contain;
-    /* Maintain aspect ratio while fitting within bounds */
+}
+	 .single-line-image3 {
+     max-width: 90%;
+     height: auto;
+     width: auto;
+     max-height: 600px;
+     display: block;
+     margin: 20px auto;
+     object-fit: contain;
 }
  .responsive-image {
      height: auto;
-    /* Allow height to adjust naturally */
      width: auto;
-    /* Allow width to adjust naturally */
      max-height: 500px;
-    /* Reduced from 800px for more consistency */
      display: block;
      border-radius: 8px;
-    /* Add slight rounding to corners */
      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-    /* Subtle shadow for depth */
      object-fit: contain;
-    /* Maintain aspect ratio while fitting within bounds */
 }
  .tool-section img.responsive-image {
      float: right;
@@ -390,6 +379,11 @@
          margin-right: auto;
          max-width: 100%;
         /* Slightly reduced from 100% to prevent edge bleeding */
+    }
+	      .single-line-image3 {
+         margin-left: auto;
+         margin-right: auto;
+         max-width: 100%;
     }
     /* Handle side-by-side images on mobile */
      .side-by-side-images {
