--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta "="" content="width=device-width" name="viewport"/>
 <meta content="noindex" name="robots"/>
+ <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
 <style>
 
        body {
