--- a/index.html
+++ b/index.html
@@ -1332,7 +1332,7 @@
                   <p>Each position is evaluated using its own set of weighted metrics:</p>
 
                   <br>
-                  <iframe src="&lt;!DOCTYPE html&gt;.html" style="width:100%;height:620px;border:none;" title="Performance Index Details"></iframe>
+                  <iframe src="https://datamb.football/perfindexmetrics/index.html" style="width:100%;height:620px;border:none;" title="Performance Index Details"></iframe>
                   <br>
                   <p>For each player, we look at their stats compared to others in the same league and position and compute their percentile rank for each metric. Then, we combine and weight these percentiles based on the metric's importance. This creates an average performance score, which we then normalize, scale, and transform to fit a digestible range. A score of 99 is awarded to a player in each position who achieves the highest dominance over their league peers.</p>
               <br></div>
